syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstExpbookTableItemExProtobuf";

message	ConstExpbookTableItemEx  {
	optional	string	id = 1;
	optional	string	name = 2;
	optional	string	desc = 3;
	optional	uint32	value = 4;
	optional	string	quality = 5;
	optional	string	icon = 6;
}